@@ -67,6 +67,15 @@ func host_init() {
 		SetBlocksDBCacheSize:true, BlocksDBCacheSize:int(common.CFG.Memory.MaxCachedBlks),
 		BlockMinedCB : blockMined}
 
+	if !common.FLAG.NoWallet {
+		wallet.AllBalancesP2KH = make(map[[20]byte]*wallet.OneAllAddrBal)
+		wallet.AllBalancesP2SH = make(map[[20]byte]*wallet.OneAllAddrBal)
+		if common.FLAG.BalanceOnLoad {
+			// check balances while loading
+			ext.UTXOCallbacks.LoadWalk = wallet.NewUTXO
+		}
+	}
+
 	sta := time.Now()
 	common.BlockChain = chain.NewChainExt(common.GocoinHomeDir, common.GenesisBlock, common.FLAG.Rescan, ext)
 	if chain.AbortNow {
@@ -93,28 +102,33 @@ func host_init() {
 	fmt.Printf("Blockchain open in %s.  %d + %d MB of RAM used (%d)\n",
 		sto.Sub(sta).String(), al>>20, utxo.ExtraMemoryConsumed>>20, sy>>20)
 
-	if common.FLAG.UndoBlocks==0 && !common.FLAG.NoWallet {
+	if !common.FLAG.NoWallet {
 		// Init Wallet
 		common.BlockChain.Unspent.CB.NotifyTxAdd = wallet.TxNotifyAdd
 		common.BlockChain.Unspent.CB.NotifyTxDel = wallet.TxNotifyDel
 		// LoadWalk = wallet.NewUTXO
-		sta = time.Now()
-		wallet.FetchInitialBalance(&chain.AbortNow)
-		if chain.AbortNow {
-			fmt.Printf("Loading balances aborted after %s seconds\n", time.Now().Sub(sta).String())
-			common.BlockChain.Close()
-			sys.UnlockDatabaseDir()
-			os.Exit(1)
+		if !common.FLAG.BalanceOnLoad {
+			sta = time.Now()
+			wallet.FetchInitialBalance(&chain.AbortNow)
+			if chain.AbortNow {
+				fmt.Printf("Loading balances aborted after %s seconds\n", time.Now().Sub(sta).String())
+				common.BlockChain.Close()
+				sys.UnlockDatabaseDir()
+				os.Exit(1)
+			}
+			if common.CFG.Memory.FreeAtStart {
+				fmt.Print("Freeing memory... ")
+				sys.FreeMem()
+				fmt.Print("\r                  \r")
+			}
+			sto = time.Now()
+			al, sy = sys.MemUsed()
+			fmt.Printf("Balances loaded in %s seconds.  %d + %d MB of RAM used (%d)\n",
+				sto.Sub(sta).String(), al>>20, utxo.ExtraMemoryConsumed>>20, sy>>20)
+		} else {
+			fmt.Println("Balances of", btc.UintToBtc(common.AllBalMinVal),
+				"BTC or less already done when loading UTXO.db")
 		}
-		if common.CFG.Memory.FreeAtStart {
-			fmt.Print("Freeing memory... ")
-			sys.FreeMem()
-			fmt.Print("\r                  \r")
-		}
-		sto = time.Now()
-		al, sy = sys.MemUsed()
-		fmt.Printf("Balances loaded in %s seconds.  %d + %d MB of RAM used (%d)\n",
-			sto.Sub(sta).String(), al>>20, utxo.ExtraMemoryConsumed>>20, sy>>20)
 	}
 
 	common.StartTime = time.Now()
